# clandestino

./: .env.example  README.md  pyproject.toml
clandestino/: __init__.py  clandestino.py
clandestino/src/: ref.py
extras/elasticsearch/: README.md  pyproject.toml
extras/elasticsearch/clandestino_elasticsearch/: __init__.py  infra.py  ref.py  repository.py
extras/interfaces/: README.md  pyproject.toml
extras/interfaces/clandestino_interfaces/: __init__.py  abstract.py  enum.py  interface.py
extras/mongo/: README.md  pyproject.toml
extras/mongo/clandestino_mongo/: __init__.py  infra.py  repository.py
extras/postgres/: README.md  pyproject.toml
extras/postgres/clandestino_postgres/: __init__.py  infra.py  ref.py  repository.py
migrations/: migration_2024_02_29_20_59_24_a1.py  migration_2024_02_29_22_35_30_a2.py  migration_2024_03_01_20_10_59_A.py
