[tool.poetry]
name = "clandestino_interfaces"
version = "0.1.1"
description = "Clandestino base interfaces"
authors = ["XimitGaia <im.ximit@gmail.com>"]
readme = "README.md"
packages = [
    {include = "clandestino_interfaces"},
]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
