[tool.poetry]
name = "clandestino_postgres"
version = "0.1.1"
description = "Clandestino Postgres implementation"
authors = ["XimitGaia <im.ximit@gmail.com>"]
readme = "README.md"
packages = [
    {include = "clandestino_postgres"},
]

[tool.poetry.dependencies]
python = "^3.11"
python-decouple = "^3.8"
psycopg = {version = "^3.1.18", extras = ["binary"]}
clandestino-interfaces = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
